@@ -1,3 +1,9 @@
+2020-01-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/92531 - ICE with noexcept(lambda).
+	* pt.c (uses_template_parms): Don't try to enumerate all the
+	expression cases.
+
 2020-01-16  Jason Merrill  <jason@redhat.com>
 
 	PR c++/93286 - ICE with __is_constructible and variadic template.
